--- a/package.json
+++ b/package.json
@@ -10,20 +10,13 @@
   },
   "dependencies": {
     "gh2": "0.0.1",
-    "semver": "~2.2.1",
-    "thunkify": "0.0.1",
-    "co-request": "~0.2.0",
-    "co-from-stream": "0.0.0",
-    "co-write": "~0.3.0",
-    "co-read": "0.0.1",
     "decompress": "~0.1.6",
-    "request": "~2.34.0",
-    "co-req": "0.0.3"
+    "co-req": "0.0.3",
+    "thunkify": "0.0.1"
   },
   "devDependencies": {
     "mocha": "*",
     "should": "*",
-    "thunkify": "*",
     "co": "*"
   },
   "main": "index"
