update to resolve branch refs

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "url": "git://github.com/matthewmueller/gh-package.git"
   },
   "dependencies": {
-    "gh2": "0.0.1",
+    "gh": "matthewmueller/gh",
     "decompress": "~0.1.6",
     "co-req": "0.0.3",
     "thunkify": "0.0.1",
