--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "url": "git://github.com/matthewmueller/duo-package.git"
   },
   "dependencies": {
-    "gh": "matthewmueller/gh",
-    "decompress": "~0.1.6",
+    "co-fs": "^1.2.0",
     "co-req": "0.0.3",
-    "thunkify": "0.0.1",
-    "co-write": "~0.3.0"
+    "co-write": "~0.3.0",
+    "debug": "^0.8.0",
+    "decompress": "~0.1.6",
+    "gh": "matthewmueller/gh",
+    "thunkify": "0.0.1"
   },
   "devDependencies": {
     "mocha": "*",
