--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "decompress": "~0.2.2",
     "gh": "matthewmueller/gh",
     "thunkify": "0.0.1",
-    "gh-resolve": "0.1.2"
+    "gh-resolve": "0.1.3",
+    "semver": "~2.3.0"
   },
   "devDependencies": {
     "co": "^3.0.5",
