--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "gh": "matthewmueller/gh",
     "thunkify": "0.0.1",
     "gh-resolve": "0.1.3",
-    "semver": "~2.3.0"
+    "semver": "~2.3.0",
+    "better-error": "0.0.2",
+    "netrc": "~0.1.3"
   },
   "devDependencies": {
     "co": "^3.0.5",
