--- a/package.json
+++ b/package.json
@@ -10,16 +10,15 @@
   },
   "dependencies": {
     "co-fs": "^1.2.0",
-    "co-req": "0.0.4",
-    "co-write": "~0.3.0",
     "debug": "^0.8.0",
-    "decompress": "~0.2.2",
     "gh": "matthewmueller/gh",
     "thunkify": "0.0.1",
     "gh-resolve": "0.1.3",
     "semver": "~2.3.0",
     "better-error": "0.0.2",
-    "netrc": "~0.1.3"
+    "netrc": "~0.1.3",
+    "download": "~0.1.17",
+    "co-req": "0.0.4"
   },
   "devDependencies": {
     "co": "^3.0.5",
