--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "debug": "^0.8.0",
     "gh": "matthewmueller/gh",
     "thunkify": "0.0.1",
-    "gh-resolve": "0.1.3",
+    "gh-resolve": "~0.1.4",
     "semver": "~2.3.0",
     "better-error": "0.0.2",
     "netrc": "~0.1.3",
