depend on duo-cache master for now.

--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "co-req": "0.0.4",
     "debug": "^0.8.0",
     "download": "~0.1.17",
-    "duo-cache": "1.x",
-    "gh": "matthewmueller/gh",
+    "duo-cache": "git+ssh://git@github.com:component/duo-cache.git",
     "gh-resolve": "~0.1.5",
     "netrc": "~0.1.3",
     "request": "^2.36.0",
