--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "co-req": "0.0.4",
     "debug": "^0.8.0",
     "download": "~0.1.17",
-    "duo-cache": "git+ssh://git@github.com:component/duo-cache.git",
+    "duo-cache": "1.x",
     "gh-resolve": "1.x",
     "netrc": "~0.1.3",
     "request": "^2.36.0",
