--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "debug": "^0.8.0",
     "download": "~0.1.17",
     "duo-cache": "1.x",
-    "gh-resolve": "1.x",
+    "gh-resolve": "0.1.5",
     "netrc": "~0.1.3",
     "request": "^2.36.0",
     "semver": "~2.3.0",
