--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
   },
   "devDependencies": {
     "co": "^3.0.5",
+    "co-mocha": "0.0.4",
+    "mkdirp": "^0.5.0",
     "mocha": "*",
+    "rimraf": "^2.2.8",
     "should": "*"
   },
   "main": "index"
