--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "debug": "^0.8.0",
     "duo-cache": "1.x",
     "enstore": "0.0.2",
-    "gh-resolve": "0.1.5",
+    "gh-resolve": "~2.0.0",
     "netrc": "~0.1.3",
     "request": "^2.36.0",
     "semver": "~2.3.0",
