--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "duo-cache": "1.x",
     "enstore": "0.0.2",
     "gh-resolve": "^2.0.2",
-    "netrc": "~0.1.3",
+    "node-netrc": "0.0.1",
     "request": "^2.36.0",
     "semver": "~2.3.0",
     "tar": "^0.1.19",
