must more reliable download. checks if pkg already exists. added progress events

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "co-fs": "^1.2.0",
     "co-req": "0.0.4",
     "debug": "^0.8.0",
+    "download": "^0.1.18",
     "duo-cache": "1.x",
     "enstore": "0.0.2",
     "gh-resolve": "^2.0.2",
