--- a/package.json
+++ b/package.json
@@ -10,10 +10,7 @@
   },
   "dependencies": {
     "co-fs": "^1.2.0",
-    "co-req": "0.0.4",
     "debug": "^0.8.0",
-    "download": "^0.1.18",
-    "duo-cache": "1.x",
     "enstore": "0.0.2",
     "gh-resolve": "^2.0.2",
     "node-netrc": "0.0.1",
@@ -27,8 +24,7 @@
     "co-mocha": "0.0.4",
     "mkdirp": "^0.5.0",
     "mocha": "*",
-    "rimraf": "^2.2.8",
-    "should": "*"
+    "rimraf": "^2.2.8"
   },
-  "main": "index"
+  "main": "index.js"
 }
