--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "co-fs": "^1.2.0",
     "debug": "^0.8.0",
     "enstore": "0.0.2",
+    "generator-supported": "0.0.1",
     "gh-resolve": "^2.0.2",
     "node-netrc": "0.0.1",
     "request": "^2.36.0",
@@ -22,9 +23,16 @@
   "devDependencies": {
     "co": "^3.0.5",
     "co-mocha": "0.0.4",
+    "gnode": "0.0.8",
     "mkdirp": "^0.5.0",
     "mocha": "*",
+    "regenerator": "dominicbarnes/regenerator",
     "rimraf": "^2.2.8"
   },
-  "main": "index.js"
+  "main": "index.js",
+  "scripts": {
+    "build": "regenerator lib/ --out build/",
+    "test": "gnode ./node_modules/.bin/_mocha",
+    "prepublish": "npm run build"
+  }
 }
