--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "enstore": "0.0.2",
     "generator-supported": "0.0.1",
     "gh-resolve": "^2.0.2",
+    "gnode": "0.0.8",
     "node-netrc": "0.0.1",
     "request": "^2.36.0",
     "semver": "~2.3.0",
@@ -26,7 +27,6 @@
     "gnode": "0.0.8",
     "mkdirp": "^0.5.0",
     "mocha": "*",
-    "regenerator": "~0.4.10",
     "rimraf": "^2.2.8"
   },
   "main": "index.js",
