--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "enstore": "0.0.2",
     "gh-resolve": "^3.0.0",
     "gnode": "0.0.8",
+    "mkdirp": "^0.5.0",
     "node-netrc": "0.0.1",
     "request": "^2.36.0",
     "semver": "~2.3.0",
