--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
   },
   "devDependencies": {
     "co": "^3.0.5",
-    "co-mocha": "0.0.4",
+    "co-mocha": "^1.1.0",
     "mkdirp": "^0.5.0",
-    "mocha": "*",
+    "mocha": "^2.0.1",
     "rimraf": "^2.2.8"
   },
   "main": "index.js"
