--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "co-fs": "^1.2.0",
     "debug": "^2.0.0",
     "enstore": "0.0.2",
+    "es6-promise": "^2.0.1",
     "gh-resolve": "^3.0.3",
     "gnode": "^0.1.0",
     "mkdirp": "^0.5.0",
