--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gnode": "^0.1.0",
     "mkdirp": "^0.5.0",
     "request": "^2.36.0",
+    "rimraf-then": "^1.0.0",
     "semver": "~2.3.0",
     "tar-fs": "^0.4.1",
     "thunkify": "0.0.1",
