--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "bluebird": "^2.9.15",
     "co": "^3.0.5",
     "co-mocha": "1.0.3",
+    "eslint": "^0.24.0",
+    "eslint-config-duo": "0.0.1",
     "gnode": "^0.1.1",
     "mocha": "^2.0.1",
     "node-netrc": "0.0.1"
