--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "debug": "^2.0.0",
     "enstore": "0.0.2",
     "gh-resolve": "^3.0.3",
-    "mkdirp-then": "^1.0.1",
+    "mkdirp": "^0.5.1",
     "request": "^2.36.0",
     "rimraf-then": "^1.0.0",
     "semver": "~2.3.0",
